fix a couple of css whitespacing issues

--- a/web/app/assets/stylesheets/account.scss
+++ b/web/app/assets/stylesheets/account.scss
@@ -20,7 +20,7 @@
 }
 
 .account-left-menu {
-  margin-left: 1.1rem !important;
+  margin-left: 1.0rem !important;
   > li {
     > a {
       padding-left: 1.75rem !important;
